--- a/style.css
+++ b/style.css
@@ -1,67 +1,58 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
+* {box-sizing: border-box}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Poppins', Verdana, sans-serif;
 }
 
-.container{
-	width: 100%;
-	height: 100%;
+/* Style tab links */
+.tablink {
+  background-color: rgb(100, 100, 100);
+  color: black;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 2em;
+  width: 50%;
 }
 
-.menu ul{
-	display: inline-flex;
-	margin: 50px;
+.tablink:hover {
+  background-color: rgb(200, 200, 200);
 }
 
-.menu ul li{
-	list-style: none;
-	margin: 0 20px;
-	color: #b2b1b1;
-	cursor: pointer;
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
 }
 
-.logo img{
-	width: 50px;
-	margin-top: -7px;
-	margin-right: 48px;
+#author_img{
+  float: left;
+  width: 40%;
+  border-radius: 50% 50% 50% 0%;
 }
 
-.banner{
-	width: 80%;
-	height: 70%;
-	top: 25%;
-	left: 130px;
-	position: absolute;
+h1 {
+  font-family: 'Abril Fatface', Georgia, serif;
+  font-size: 2.5em;
 }
 
-.about-text{
-	width: 50%;
-	float: left;
-	margin-top: -30px;
+p{
+  font-size: 1.1em;
 }
 
-.about-text h1{
-	font-size: 50px;
-	width: 640px;
-	position: relative;
-	margin-left: 30px;
+#about_me {
+  background-color: rgba(255, 0, 0, 0.5);
+  color: black;
 }
 
-.about-text p{
-	font-size: 20px;
-	width: 650px;
-	margin-left: 30px;
-	line-height: 25px;
+#contact {
+  background-color: rgba(0, 255, 0, 0.5);
+  color: black;
 }
-
-.display-picture{
-	width: 30%;
-	float: left;
-}
-
-.display-picture img{
-	width: 100%;
-	margin-top: -20px;
-}
-
