--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-* {box-sizing: border-box}
+* {
+  box-sizing: border-box;
+  background-color: black;
+}
 
 body {
   margin: 0;
@@ -9,15 +12,16 @@ body {
 
 /* Style tab links */
 .tablink {
-  background-color: rgb(100, 100, 100);
-  color: black;
+  background-color: rgb(128, 128, 128);
+  color: white;
+  font-weight: bold;
   float: left;
   border: none;
   outline: none;
   cursor: pointer;
   padding: 14px 16px;
-  font-size: 2em;
-  width: 50%;
+  font-size: 2vw;
+  width: 25%;
 }
 
 .tablink:hover {
@@ -25,34 +29,41 @@ body {
 }
 
 /* Style the tab content (and add height:100% for full page content) */
+
 .tabcontent {
-  color: white;
   display: none;
-  padding: 100px 20px;
+  padding: 15vh 8vw;
   height: 100%;
+  line-height: 200%;
 }
 
 #author_img{
   float: left;
   width: 40%;
-  border-radius: 50% 50% 50% 0%;
+  border-radius: 50%;
+  padding: 3%;
 }
 
-h1 {
+#author_img:hover {
+  padding: 1%;
+}
+
+.tabcontent h1 {
   font-family: 'Abril Fatface', Georgia, serif;
-  font-size: 2.5em;
+  font-size: 2.6em;
+  color: orange;
 }
 
-p{
-  font-size: 1.1em;
+.tabcontent p {
+  font-size: 1.2em;
+  color: white;
 }
 
-#about_me {
-  background-color: rgba(255, 0, 0, 0.5);
-  color: black;
+a {
+  color: blue;
+  text-decoration: none;
 }
 
-#contact {
-  background-color: rgba(0, 255, 0, 0.5);
-  color: black;
+a:hover {
+  text-decoration: underline;
 }
