--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
   box-sizing: border-box;
-  background-color: rgb(35, 37, 47);
-  background-color: #AFA9CB;
+  background-color: #FEFBEA;
+  /* background-color: rgb(35, 37, 47);
+  background-color: #AFA9CB; */
 }
 
 body {
@@ -14,7 +15,7 @@ body {
 
 /* Style tab links */
 .tablink {
-  background-color: #BEB9D5;
+  background-color: rgb(250, 250, 250);
   color: black;
   font-weight: bold;
   float: left;
@@ -23,7 +24,7 @@ body {
   cursor: pointer;
   padding: 14px 16px;
   font-size: 1.8vw;
-  width: 25%;
+  width: 20%;
 }
 
 .tablink:hover {
@@ -40,9 +41,9 @@ body {
 }
 
 #author_img{
-  float: left;
+  float: right;
   width: 40%;
-  border-radius: 50%;
+  border-radius: 40%;
   padding: 3%;
 }
 
@@ -54,7 +55,7 @@ body {
   font-family: 'Abril Fatface', Georgia, serif;
   font-family: Verdana;
   font-size: 2.4em;
-  color: brown;
+  color: rebeccapurple;
 }
 
 .tabcontent p {
@@ -63,7 +64,7 @@ body {
 }
 
 a {
-  color: purple;
+  color: blueviolet;
   text-decoration: none;
 }
 
