--- a/style.css
+++ b/style.css
@@ -1,114 +1,70 @@
-* {
-  box-sizing: border-box;
-  background-color: #FEFBEA;
-  /* background-color: rgb(35, 37, 47);
-  background-color: #AFA9CB; */
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: 'Poppins', Verdana, sans-serif;
-  font-family: 'Montserrat';
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif; 
+    display: flex;
 }
 
-/* Style tab links */
-.tablink {
-  background-color: rgb(250, 250, 250);
-  color: black;
-  font-weight: bold;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  font-size: 1.8vw;
-  width: 25%;
+/* body {
+    font-family: Arial, sans-serif;
+    display: flex;
+} */
+
+#sidebar {
+    flex: 0 0 200px;
+    background: #f0f0f0;
+    height: 100vh;
+    padding: 20px;
 }
 
-.tablink:hover {
-  background-color: rgb(200, 200, 200);
+#sidebar #author_img {
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 10px; /* Adds spacing below the image */
 }
 
-/* Style the tab content (and add height:100% for full page content) */
-
-.tabcontent {
-  display: none;
-  padding: 15vh 8vw;
-  height: 100%;
-  line-height: 200%;
+#sidebar ul {
+    list-style: none;
+    padding: 0;
 }
 
-#author_img{
-  float: right;
-  width: 40%;
-  border-radius: 40%;
-  padding: 3%;
+#sidebar ul li a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
-#author_img:hover {
-  padding: 1%;
+#sidebar ul li a:hover {
+    background-color: #ddd;
 }
 
-.tabcontent h1 {
-  font-family: 'Abril Fatface', Georgia, serif;
-  font-family: Verdana;
-  font-size: 2.4em;
-  color: rebeccapurple;
+#sidebar #social-links {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.tabcontent p {
-  font-size: 1.1em;
-  color: black;
+#sidebar #social-links a {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    margin-right: 10px;
+    transition: color 0.3s;
 }
 
-a {
-  color: blueviolet;
-  text-decoration: none;
+#sidebar #social-links a:hover {
+    color: #007bff; /* Change this color to suit your design */
 }
 
-a:hover {
-  text-decoration: underline;
+#content {
+    flex-grow: 1;
+    padding: 20px;
 }
 
-#links {
-  line-height: 300%;
+section {
+    margin-bottom: 40px;
 }
 
-.tabcontent .fa {
-  border-radius: 50%;
-  display: inline;
-  padding: 20px;
-  font-size: 20px;
-  width: 100%;
-  text-align: center;
-  text-decoration: none;
-  margin: 1vw;
-}
-
-
-.fa:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.fa-envelope {
-  background: #dd4b39;
-  color: white;
-}
-
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
