--- a/style.css
+++ b/style.css
@@ -2,26 +2,29 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Georgia, 'Times New Roman', Times, serif;
     display: flex;
+    line-height: 1.6;
+    color: #333;
 }
 
-/* body {
-    font-family: Arial, sans-serif;
-    display: flex;
-} */
-
 #sidebar {
-    flex: 0 0 200px;
+    flex: 0 0 15%; 
     background: #f0f0f0;
     height: 100vh;
-    padding: 20px;
+    padding: 1.5%; 
+    text-align: center;
+    font-size: 1.1em;
+    margin-left: 1%; 
+    border: 2px solid #ddd; 
+    border-radius: 10px; 
 }
 
 #sidebar #author_img {
     width: 100%;
-    border-radius: 5px;
-    margin-bottom: 10px; /* Adds spacing below the image */
+    border-radius: 10%;
+    margin-bottom: 1%; 
+    display: inline-block;
 }
 
 #sidebar ul {
@@ -29,12 +32,16 @@ body {
     padding: 0;
 }
 
+#sidebar ul li {
+    margin: 0; 
+}
+
 #sidebar ul li a {
     text-decoration: none;
     color: black;
     display: block;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 1%;
+    border-radius: 5%; 
     transition: background-color 0.3s;
 }
 
@@ -43,28 +50,48 @@ body {
 }
 
 #sidebar #social-links {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 2%;
+    margin-bottom: 2%; 
 }
 
 #sidebar #social-links a {
     text-decoration: none;
     color: black;
-    font-size: 24px;
-    margin-right: 10px;
+    font-size: 2em; 
+    margin-right: 3%;
     transition: color 0.3s;
 }
 
 #sidebar #social-links a:hover {
-    color: #007bff; /* Change this color to suit your design */
+    color: #007bff;
 }
 
 #content {
     flex-grow: 1;
-    padding: 20px;
+    padding: 2%; 
+    font-size: 1.1em;
+    max-width: 100%;
+    margin: auto;
 }
 
 section {
-    margin-bottom: 40px;
+    margin-bottom: 3%; 
 }
 
+@media (min-width: 576px) { /* Small devices (landscape phones) */
+    #content {
+        max-width: 90%; 
+    }
+}
+
+@media (min-width: 768px) { /* Medium devices (tablets) */
+    #content {
+        max-width: 80%; 
+    }
+}
+
+@media (min-width: 992px) { /* Large devices (desktops) */
+    #content {
+        max-width: 730px; 
+    }
+}
