added faridabad poster and changed background for sidebar footer

--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@ body {
 #sidebar #social-links {
     margin-top: 2%;
     margin-bottom: 2%; 
-    border-top: 0.5em solid rgb(128, 128, 128);
+    background-color: #f0f0f0;
+    /* border-top: 0.5em solid rgb(128, 128, 128);
     border-bottom: 0.5em solid rgb(128, 128, 128);
-    background-color: rgb(128, 128, 128);
+    background-color: rgb(128, 128, 128); */
 }
 
 #sidebar #author_img {
